--- a/EllaApp/Presentacao/Inicio/ViewControllerInicial.xib
+++ b/EllaApp/Presentacao/Inicio/ViewControllerInicial.xib
@@ -1,22 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewControllerInicial" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewControllerInicial" customModule="EllaApp" customModuleProvider="target">
             <connections>
+                <outlet property="bemvindeLabel" destination="8d3-WX-0ZK" id="0jk-d4-WC2"/>
+                <outlet property="perfilImageView" destination="e07-b8-IGr" id="aVB-3k-fso"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bem-vinde :)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8d3-WX-0ZK">
+                    <rect key="frame" x="127.66666666666667" y="412.33333333333331" width="137.66666666666663" height="27.666666666666686"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CfX-qz-3t1">
+                    <rect key="frame" x="161.66666666666666" y="448" width="70" height="35"/>
+                    <color key="backgroundColor" red="0.82352941176470584" green="0.83921568627450982" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="tintColor" red="0.29411764705882354" green="0.32549019607843138" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Iniciar"/>
+                    <connections>
+                        <action selector="aoApertarIniciar:" destination="-1" eventType="touchUpInside" id="cCP-PL-Tev"/>
+                    </connections>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hello" translatesAutoresizingMaskIntoConstraints="NO" id="e07-b8-IGr">
+                    <rect key="frame" x="132.66666666666666" y="268.33333333333331" width="127.99999999999997" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="128" id="9CG-0Z-g1c"/>
+                        <constraint firstAttribute="height" constant="128" id="RHf-Md-chz"/>
+                    </constraints>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" red="0.68627450980392157" green="0.5725490196078431" blue="0.61568627450980395" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <constraints>
+                <constraint firstItem="8d3-WX-0ZK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Fa5-y6-7bJ"/>
+                <constraint firstItem="CfX-qz-3t1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Ivd-aG-7Xc"/>
+                <constraint firstItem="CfX-qz-3t1" firstAttribute="top" secondItem="8d3-WX-0ZK" secondAttribute="bottom" constant="8" id="Q8Q-Ff-6kz"/>
+                <constraint firstItem="8d3-WX-0ZK" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="amH-Ju-8EY"/>
+                <constraint firstItem="e07-b8-IGr" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oj3-bQ-kOb"/>
+                <constraint firstItem="8d3-WX-0ZK" firstAttribute="top" secondItem="e07-b8-IGr" secondAttribute="bottom" constant="16" id="sD3-bg-9XS"/>
+            </constraints>
+            <point key="canvasLocation" x="132" y="-11"/>
         </view>
     </objects>
+    <resources>
+        <image name="hello" width="225" height="225"/>
+    </resources>
 </document>
